--- a/backend/ILSpyX.Backend/ILSpyX.Backend.csproj
+++ b/backend/ILSpyX.Backend/ILSpyX.Backend.csproj
@@ -21,13 +21,18 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <PackageReference Include="ICSharpCode.ILSpyX" Version="9.0.0.7618-preview1" />
     <PackageReference Include="Mono.Cecil" Version="0.11.5" />
     <PackageReference Include="OmniSharp.Extensions.LanguageServer" Version="0.19.9" />
     <PackageReference Include="Serilog" Version="3.1.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ILSpyX\ILSpyX.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Analyzer/" />
   </ItemGroup>
    <PropertyGroup>
     <RestoreSources>$(RestoreSources);../local_packages;https://api.nuget.org/v3/index.json</RestoreSources>
