--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,7 +32,7 @@
             "outFiles": [
                 "${workspaceFolder}/vscode-extension/dist/**/*.js"
             ],
-            "preLaunchTask": "${defaultBuildTask}"
+            "preLaunchTask": "Build All"
         },
         {
             "name": "Extension Tests",
